--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://julianmayorga.github.com
+production_url : http://julianmayorga.com.ar
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -88,7 +88,7 @@ JB :
       appid : 123
       num_posts: 5
       width: 580
-      colorscheme: light
+      colorscheme: dark
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
@@ -107,7 +107,7 @@ JB :
   # Set 'provider' to false to turn sharing off globally.
   #
   sharing :
-    provider : false
+    provider : like
     
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
